# swap

./: .aider.chat.history.md  .env.example  .gitignore  README.md  TECHNICAL_README.md  aio.py  dockerfile  pyproject.toml  requirements.txt
config/: config.yaml.example
src/: main.py
src/swap/: __init__.py  cli.py
src/swap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/swap/config/: __init__.py  logging.py  settings.py
src/swap/data/: __init__.py  database.py  models.py  repositories.py
src/swap/services/: __init__.py  calendar_service.py  rota_parser.py  sheets_service.py  sync_service.py
src/swap/utils/: __init__.py  time_parser.py  validators.py
swap/: config.py  db_init.py  main.py
swap/api/v1/: calendar.py  endpoints.py  scheduler.py  scheduler_api.py
swap/core/: database.py  raw2rota.py  rota2db.py  rota_operations.py  rota_processor.py
swap/models/: calendar.py  notification.py  rota.py
swap/scheduler/: scheduler.py  tasks.py
swap/services/: calendar_manager.py  google_calendar.py  rota_parser.py
swap/utils/: logger.py
tests/: a1.py  b1.py  conftest.py  test_time_parser.py
